--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
                 <div class="card">
                     <h3 class="textAll">Khối lớp 1</h3>
                     <div class="card-body">
-                        <form action="" class="d-flex">
-                            <button>Toán</button>
-                            <input id="diemToan" type="text">
-                        </form>
-                        <form action="" class="d-flex">
-                            <button>Lý</button>
-                            <input id="diemLy" type="text">
-                        </form>
-                        <form action="" class="d-flex">
-                            <button>Hóa</button>
-                            <input id="diemHoa" type="text">
-                        </form>
+                        <span>
+                            <input class="gate" id="diemToan" type="text" placeholder="Nhập điểm toán">
+                            <label for="diemToan">Toán</label>
+                        </span>
+
+                        <span>
+                            <input class="gate" id="diemLy" type="text" placeholder="Nhập điểm lý">
+                            <label for="diemLy">Lý</label>
+                        </span>
+
+                        <span>
+                            <input class="gate" id="diemHoa" type="text" placeholder="Nhập điểm hóa">
+                            <label for="diemHoa">Hóa</label>
+                        </span>
+
                         <div class="buttonAll">
                             <button id="btnLop1" class="btn btn-success">Tính</button>
                         </div>
@@ -41,22 +44,26 @@
                 <div class="card">
                     <h3 class="textAll">Khối lớp 2</h3>
                     <div class="card-body">
-                        <form action="" class="d-flex">
-                            <button>Văn</button>
-                            <input id="diemVan" type="text">
-                        </form>
-                        <form action="" class="d-flex">
-                            <button>Sử</button>
-                            <input id="diemSu" type="text">
-                        </form>
-                        <form action="" class="d-flex">
-                            <button>Địa</button>
-                            <input id="diemDia" type="text">
-                        </form>
-                        <form action="" class="d-flex">
-                            <button>English</button>
-                            <input id="diemEnglish" type="text">
-                        </form>
+                        <span>
+                            <input class="gate" id="diemVan" type="text" placeholder="Nhập điểm văn">
+                            <label for="diemVan">Văn</label>
+                        </span>
+
+                        <span>
+                            <input class="gate" id="diemSu" type="text" placeholder="Nhập điểm sử">
+                            <label for="diemSu">Sử</label>
+                        </span>
+
+                        <span>
+                            <input class="gate" id="diemDia" type="text" placeholder="Nhập điểm địa">
+                            <label for="diemDia">Địa</label>
+                        </span>
+
+                        <span>
+                            <input class="gate" id="diemEnglish" type="text" placeholder="Nhập điểm english">
+                            <label for="diemEnglish">English</label>
+                        </span>
+
                         <div class="buttonAll">
                             <button id="btnLop2" class="btn btn-success">Tính</button>
                         </div>
